--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -610,7 +610,7 @@ select, textarea, input[type="text"], input[type="number"]
 	border-bottom: thin solid #D3D3D3;
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	color: #000;
-	height: 120%;
+	height: 100%;
 	font-variant: normal;
 }
 
@@ -995,35 +995,6 @@ input[type="checkbox"]:checked.sheet-patch + span::before
 	content: "☒";
 }
 
-
-/* Fake radio as D10s*/
-/*input[type="radio"].sheet-D10 + span::before
-{
-	margin-right: 4px;
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	width: 10px;
-	height: 10px;
-	font-size: 16px;
-	font-family: "dicefontd10";
-	content: "J";
-}*/
-
-/* Remove fill from all radios _after_ selected D10 */
-/*input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::before
-{
-	margin-right: 4px;
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	width: 10px;
-	height: 10px;
-	font-size: 16px;
-	font-family: "dicefontd10";
-	content: "0";
-}*/
-
 /* Fake checkbox as Overcharge*/
 input[type="checkbox"].sheet-Overcharge + span::before
 {
@@ -1054,36 +1025,6 @@ input[type="checkbox"]:checked.sheet-Overcharge + span::before
 	content: "!";
 }
 
-/* Fake radio as Uparrows*/
-input[type="radio"].sheet-Boost + span::before
-{
-	margin-right: 3px;
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	letter-spacing: 0.12em;
-	width: 10px;
-	height: 10px;
-	font-size: 16px;
-	font-family: "dicefontd4";
-	content: "A";
-}
-
-/* Remove fill from all radios _after_ selected Uparrows */
-input[type="radio"]:checked.sheet-Boost ~ input[type="radio"].sheet-Boost + span::before
-{
-	margin-right: 3px;
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	letter-spacing: 0.12em;
-	width: 10px;
-	height: 10px;
-	font-size: 16px;
-	font-family: "dicefontd4";
-	content: "0";
-}
-
 /* Description Damage*/
 em.sheet-techlevelBoost
 {
@@ -1098,8 +1039,8 @@ em.sheet-techlevelBoost
 }
 
 /* Description Advantage */
-em.sheet-FittingAdv,
-select.sheet-FittingAdv
+em.sheet-FittingD10,
+select.sheet-FittingD10
 {
 	line-height: 12px;
 	text-align: center;
@@ -1167,9 +1108,152 @@ button[type=roll].sheet-rollButton::before
 }
 
 /* ******************************* */
+/*			Aspects		           */
+/* ******************************* */
+.sheet-aspects
+{
+	width: 890px;
+	padding: 5px;
+	display: grid;
+	grid-template-columns: repeat(2,100px 50px 1fr);
+	grid-template-rows: 18px 15px 15px;
+	grid-gap: 0px;
+	height: 50px;
+	z-index: 0;
+}
+
+.sheet-designation
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-designationPrefix
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-designationName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-patron
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-patronName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 4;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-flag
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-flagType
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 4;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-captain
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-captainName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-tactics
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-tacticList
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+/* ******************************* */
 /*           Graphics              */
 /* ******************************* */
-
 /* Hide Checkboxes and Radio boxes */
 input[type="checkbox"].sheet-hideCheckbox,
 input[type="radio"].sheet-hideCheckbox
@@ -1262,7 +1346,6 @@ input[type="radio"].sheet-hideCheckbox
 		grid-area: vitality;
 	}
 
-
 /* Inline Checkbox Location */
 input[type="checkbox"].sheet-inlineCheckbox,
 input[type="radio"].sheet-inlineCheckbox
@@ -1302,7 +1385,6 @@ input[type="radio"].sheet-inlinePipCheckbox
 	vertical-align: middle;
 }
 
-
 input[type="radio"].sheet-inlineCapacityCheckboxSmall
 {
 	width: 8px;
@@ -1311,7 +1393,6 @@ input[type="radio"].sheet-inlineCapacityCheckboxSmall
 	padding: 0;
 	vertical-align: middle;
 }
-
 
 /* Inline Image Location */
 span.sheet-inlineArmour
@@ -1352,14 +1433,14 @@ span.sheet-inlineCapacityPipsSmall
 	vertical-align: middle;
 }
 
-
 span.sheet-inlinePips
 {
 	display: inline-block;
-	background-size: 11px 12px;
+	background-size: 10px 10px;
 	height: 12px;
 	width: 10px;
 	margin-left: -10px;
+	vertical-align: middle;
 }
 
 /* Grid Checkbox location */
@@ -1393,7 +1474,8 @@ input[type="radio"] + span.sheet-ZeroDie
 	z-index: 2;
 }
 
-input[type="radio"] + span.sheet-D10
+input[type="radio"] + span.sheet-D10,
+span.sheet-FittingD10
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/D10PipFilled.png);
 	background-repeat: no-repeat;
@@ -1412,6 +1494,25 @@ input[type="radio"]:checked + span.sheet-ZeroDie ~ input[type="radio"] + span.sh
 	z-index: 2;
 }
 
+input[type="radio"] + span.sheet-Boost,
+span.sheet-FittingBoost
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/BoostFilled.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="radio"]:checked + span.sheet-Boost ~ input[type="radio"] + span.sheet-Boost,
+input[type="radio"]:checked + span.sheet-ZeroDie ~ input[type="radio"] + span.sheet-Boost
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Boost.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
 
 input[type="radio"] + span.sheet-capacityPips
 {
@@ -1795,7 +1896,6 @@ input[type="number"].sheet-currentCharge
 /* ***************************************** */
 /*			  SHIP MODULES					 */
 /* ***************************************** */
-
 .sheet-moduleWidget
 {
 	width: 540px;
@@ -1816,7 +1916,7 @@ input[type="number"].sheet-currentCharge
 	background-size: 125px 165.38px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: minmax(6px,14px) minmax(20px,50px) minmax(20px,50px) minmax(20px,50px);
+	grid-template-columns: minmax(6px,14px) minmax(20px,50px) 1fr 27px;
 	grid-template-rows: repeat(11,15px);
 	grid-gap: 0px;
 	height: 162px;
@@ -1841,7 +1941,7 @@ input[type="number"].sheet-currentCharge
 	font-variant: small-caps;
 	font-weight: 500;
 	flex-flow: nowrap;
-	font-size: 13px;
+	font-size: 12px;
 	grid-column-start: 1;
 	grid-row-start: 1;
 	grid-column-end: 5;
@@ -1855,7 +1955,7 @@ input[type="number"].sheet-currentCharge
 	font-variant: small-caps;
 	font-weight: 500;
 	flex-flow: nowrap;
-	font-size: 13px;
+	font-size: 12px;
 	grid-column-start: 2;
 	grid-row-start: 1;
 	grid-column-end: 5;
@@ -1876,7 +1976,7 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleDetail
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
 	grid-row-start: 2;
 	grid-column-end: 5;
@@ -1898,9 +1998,9 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleRange
 {
-	font-size: 11px;
-	text-align: right;
-	grid-column-start: 3;
+	font-size: 10px;
+	text-align: end;
+	grid-column-start: 2;
 	grid-row-start: 3;
 	grid-column-end: 5;
 	grid-row-end: 4;
@@ -1932,7 +2032,7 @@ input[type="number"].sheet-currentCharge
 .sheet-moduleListLabTitle1
 {
 	font-variant: small-caps;
-	font-size: 12px;
+	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 4;
 	grid-column-end: 5;
@@ -1953,7 +2053,7 @@ input[type="number"].sheet-currentCharge
 .sheet-moduleListLabTitle2
 {
 	font-variant: small-caps;
-	font-size: 12px;
+	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 6;
 	grid-column-end: 5;
@@ -1974,7 +2074,7 @@ input[type="number"].sheet-currentCharge
 .sheet-moduleListLabTitle3
 {
 	font-variant: small-caps;
-	font-size: 12px;
+	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 8;
 	grid-column-end: 5;
@@ -1994,16 +2094,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting1
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 5;
 	grid-column-end: 5;
+	grid-row-start: 5;
 	grid-row-end: 6;
 }
 
 .sheet-moduleListPips1
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 5;
@@ -2014,7 +2113,7 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListCost2
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 1;
 	grid-row-start: 6;
 	grid-column-end: 2;
@@ -2024,16 +2123,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting2
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 6;
 	grid-column-end: 5;
+	grid-row-start: 6;
 	grid-row-end: 7;
 }
 
 .sheet-moduleListPips2
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 6;
@@ -2044,7 +2142,7 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListCost3
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 1;
 	grid-row-start: 7;
 	grid-column-end: 2;
@@ -2054,16 +2152,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting3
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 7;
 	grid-column-end: 5;
+	grid-row-start: 7;
 	grid-row-end: 8;
 }
 
 .sheet-moduleListPips3
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 7;
@@ -2084,16 +2181,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting4
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 8;
 	grid-column-end: 5;
+	grid-row-start: 8;
 	grid-row-end: 9;
 }
 
 .sheet-moduleListPips4
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 8;
@@ -2114,16 +2210,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting5
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 9;
 	grid-column-end: 5;
+	grid-row-start: 9;
 	grid-row-end: 10;
 }
 
 .sheet-moduleListPips5
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 9;
@@ -2144,16 +2239,15 @@ input[type="number"].sheet-currentCharge
 
 .sheet-moduleListFitting6
 {
-	font-size: 10px;
+	font-size: 9px;
 	grid-column-start: 2;
-	grid-row-start: 10;
 	grid-column-end: 5;
+	grid-row-start: 10;
 	grid-row-end: 11;
 }
 
 .sheet-moduleListArmour6
 {
-	grid-area: systemListPips1;
 	text-align: end;
 	grid-column-start: 4;
 	grid-row-start: 10;
