small layout adjustmets

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -453,6 +453,7 @@ button.sheet-roll-button-textonly span {
 button.sheet-api-button {
   border: 1px solid lightblue;
   box-shadow: 2px 2px 3px darkgrey;
+  line-height: .85em;
 }
 
 input[type="checkbox"].sheet-hidden,
@@ -829,6 +830,12 @@ input[type="checkbox"].sheet-input {
   color: #000;
 }
 
+.sheet-details-grid div .sheet-input-textarea,
+.sheet-appearance-grid div .sheet-input-textarea {
+  height: 3em;
+  min-height: 3em;
+}
+
 input[disabled].sheet-input-number,
 input[readonly].sheet-input,
 textarea[disabled].sheet-input,
@@ -1028,6 +1035,7 @@ input.sheet-monster_only:checked~div.sheet-character .sheet-character-attributes
   border-image-width: 0 10px 10px 10px;
   border-image-repeat: repeat;
   background-color: inherit;
+  height: 100%;
 }
 
 .sheet-character-details {
@@ -1064,9 +1072,10 @@ input.sheet-monster_only:checked~div.sheet-character .sheet-character-attributes
   border-bottom-width: 18px;
   border-image-source: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Forbidden_Lands/images/FBL%20small%20column%20border.png);
   border-image-slice: 0 25 40 25;
-  border-image-width: 0 15px 15px 15px;
+  border-image-width: 0 15px 30px 15px;
   border-image-repeat: repeat;
   background-color: inherit;
+  height: 85%;
 }
 
 .sheet-character-injuries,
@@ -3635,7 +3644,6 @@ button[type="action"]:focus span {
 }
 
 .sheet-dice_pool-grid button[type="action"]:focus {
-  padding: 0;
   border-width: 2px;
   border-style: outset;
   border-image: initial;
