--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1115,7 +1115,7 @@ button[type=roll].sheet-rollButton::before
 	width: 890px;
 	padding: 5px;
 	display: grid;
-	grid-template-columns: repeat(2,100px 50px 1fr);
+	grid-template-columns: repeat(2,90px 30px 1fr);
 	grid-template-rows: 18px 15px 15px;
 	grid-gap: 0px;
 	height: 50px;
@@ -1279,33 +1279,33 @@ input[type="radio"].sheet-hideCheckbox
 	margin-top: 10px;
 }
 
-.sheet-launch-bay-tug-conditions > input
-{
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	position: absolute;
-}
+	.sheet-launch-bay-tug-conditions > input
+	{
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		position: absolute;
+	}
 
-.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-2
-{
-	grid-area: resiliance2;
-}
+	.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-2
+	{
+		grid-area: resiliance2;
+	}
 
-.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-1
-{
-	grid-area: resiliance1;
-}
+	.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-1
+	{
+		grid-area: resiliance1;
+	}
 
-.sheet-launch-bay-tug-conditions > .sheet-integrity
-{
-	grid-area: integrity;
-}
+	.sheet-launch-bay-tug-conditions > .sheet-integrity
+	{
+		grid-area: integrity;
+	}
 
-.sheet-launch-bay-tug-conditions > .sheet-vital
-{
-	grid-area: vitality;
-}
+	.sheet-launch-bay-tug-conditions > .sheet-vital
+	{
+		grid-area: vitality;
+	}
 
 /* Subgrid for Trailer Conditions */
 .sheet-launch-bay-trailer-conditions
@@ -1663,7 +1663,7 @@ input[type="checkbox"]:checked + span.sheet-vital
 	width: 170px;
 	padding-top: 4px;
 	padding-left: 4px;
-	z-index:0;
+	z-index: 0;
 }
 
 .sheet-flex-systemRow
@@ -1894,11 +1894,170 @@ input[type="number"].sheet-currentCharge
 }
 
 /* ***************************************** */
+/*				AMENITIES					 */
+/* ***************************************** */
+.sheet-amenitiesWidget
+{
+	width: 362px;
+	padding: 5px;
+}
+
+.sheet-amenities
+{
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	grid-template-rows: repeat(24,minmax(12px,15px));
+	grid-gap: 0px;
+	height: 320px;
+	width: 98%;
+	padding-left: 10px;
+	margin-left: 4px;
+}
+
+.sheet-amenityList1
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-amenityDetails1
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-amenityList2
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-amenityDetails2
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-amenityList3
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-amenityDetails3
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-amenityList4
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-amenityDetails4
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+.sheet-amenityList5
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-amenityDetails5
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-amenityList6
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-amenityDetails6
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-amenityComponent
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+}
+/* ***************************************** */
 /*			  SHIP MODULES					 */
 /* ***************************************** */
 .sheet-moduleWidget
 {
 	width: 540px;
+	padding: 5px;
 }
 
 .sheet-basicModule
@@ -1971,7 +2130,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 2;
 	grid-row-end: 2;
 	justify-self: center;
-	align-self:center;
+	align-self: center;
 }
 
 .sheet-moduleDetail
@@ -2257,7 +2416,7 @@ input[type="number"].sheet-currentCharge
 }
 
 
-/* ********************* Launch Bay ********************** */
+/* ************ Launch Bay ************* */
 .sheet-launchBay
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Shuttle.png);
@@ -2271,6 +2430,7 @@ input[type="number"].sheet-currentCharge
 	width: 362px;
 	padding-left: 6px;
 	padding-right: 12px;
+	margin-top: 4px;
 	padding-top: 4px;
 	z-index: 0;
 }
@@ -2394,7 +2554,7 @@ input[type="number"].sheet-currentCharge
 	align-self: start;
 	justify-self: end;
 	flex-wrap: nowrap;
-	font-size:8px;
+	font-size: 8px;
 }
 
 .sheet-launchBayChargeTitle
@@ -2414,7 +2574,7 @@ input[type="number"].sheet-tugReactorCharge
 	height: 40px;
 	width: 45px;
 	font-size: 18px;
-	text-align:center;
+	text-align: center;
 }
 
 .sheet-launchBayChargeBox
@@ -2468,7 +2628,6 @@ input[type="number"].sheet-tugReactorCharge
 	align-self: center;
 	justify-self: center;
 }
-
 
 .sheet-launchBayTugConditionIntegrity
 {
@@ -2795,9 +2954,18 @@ input[type="number"].sheet-tugReactorCharge
 	grid-row-end: 21;
 }
 
+.sheet-launchBayTrailerDetails9
+{
+	font-size: 9px;
+	grid-column-start: 3;
+	grid-column-end: 8;
+	grid-row-start: 21;
+	grid-row-end: 22;
+}
+
 .sheet-launchBayTrailerArmour8
 {
-	flex-wrap:nowrap;
+	flex-wrap: nowrap;
 	font-size: 9px;
 	grid-column-start: 8;
 	grid-column-end: 10;
@@ -2895,8 +3063,6 @@ input[type=number].sheet-txtfield
 /* ******************************** */
 
 /* General layout */
-
-
 .sheet-ship-block
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section.png);
@@ -2960,7 +3126,6 @@ input[type=number].sheet-txtfield
 
 
 	/* ship section armor */
-
 	.sheet-ship-block .sheet-border-armor
 	{
 		grid-column: 1 / 4;
@@ -3009,7 +3174,6 @@ input[type=number].sheet-txtfield
 	}
 
 	/* ship section resilience */
-
 	.sheet-ship-block .sheet-border-resiliance
 	{
 		grid-column: 4 / 4;
@@ -3033,7 +3197,6 @@ input[type=number].sheet-txtfield
 
 
 	/* ship section integrity */
-
 	.sheet-ship-block .sheet-border-sys-integrity
 	{
 		grid-column: 5 / 7;
@@ -3068,7 +3231,6 @@ input[type=number].sheet-txtfield
 	}
 
 	/* ship section vital */
-
 	.sheet-ship-block .sheet-border-vital
 	{
 		grid-column: 7 / 8;
@@ -3544,7 +3706,6 @@ input[type=number].sheet-txtfield
 	min-width: 17px;
 }
 
-
 .sheet-inv-color[value*="7"] + .sheet-ship-oct input[type="text"]:hover + input[type="checkbox"],
 .sheet-inv-color[value*="8"] + .sheet-ship-oct input[type="text"]:hover + input[type="checkbox"],
 .sheet-inv-color[value*="5"] + .sheet-ship-oct input[type="text"]:hover + input[type="checkbox"],
@@ -3559,7 +3720,6 @@ input[type=number].sheet-txtfield
 	min-width: 17px;
 }
 
-
 .sheet-inv-color + .sheet-ship-oct,
 .sheet-inv-color[value*="0"] + .sheet-ship-oct
 {
@@ -3570,7 +3730,6 @@ input[type=number].sheet-txtfield
 
 
 /* default insec & artery */
-
 .sheet-ship-block span.sheet-default
 {
 	z-index: 10;
@@ -3593,10 +3752,7 @@ div.sheet-ship-default:nth-child(6) > span:nth-child(2)
 	margin-left: 25px;
 }
 
-
-
 /*   Color selector menu  */
-
 div.sheet-colorselector
 {
 	display: flex;
@@ -3619,7 +3775,6 @@ div.sheet-colorselector
 }
 
 /*     Sheet header layout    */
-
 div.sheet-header
 {
 	display: flex;
@@ -3673,26 +3828,17 @@ hr
 {
 	font-weight: bold;
 	background-color: #ff7d00;
-	width: 540px;
+	width: 98%;
 	padding-left: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
-/* Hide old ship section */
-
-input.sheet-selector-switch
+.sheet-subtitlesNarrow
 {
-	display: none;
-}
-
-
-input.sheet-oldship:not(:checked) ~ .sheet-ship-hide
-{
-	display: none;
-}
-
-/* Hide new ship section */
-input.sheet-oldship:checked ~ .sheet-hideFlip
-{
-	display: none;
+	font-weight: bold;
+	background-color: #ff7d00;
+	width: 356px;
+	padding-left: 10px;
+	margin-left: 4px;
+	margin-bottom: 5px;
 }
