[GURPS] v2.2.3 Bug fuxes, Cosmetic changes: GURPS.html, GURPS.css
Added some new ToolTips – Cosmetic Only.
	Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -500,7 +500,7 @@ input.sheet-tab0 + span {
 
 .sheet-melee-notebox textarea.sheet-chat-size,
 .sheet-ranged-notebox textarea.sheet-chat-size {
-    width: 178px;
+    width: 335px;
     height: 55px;
 }
 
@@ -893,13 +893,16 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     width: 50%;
 }
 .sheet-col-dodge-label .sheet-tooltip { margin-left: 0px; }
-.sheet-damage-reduction .sheet-tooltop { margin-left: -400px; }
+.sheet-damage-reduction .sheet-tooltip { margin-left: -400px; }
 .sheet-damage-reduction .sheet-col2 .sheet-tooltip { margin-left: -300px; }
 .sheet-melee-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-melee-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-ranged-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
+.sheet-skills .sheet-tooltip-skills-ref {
+    margin-left: -200px;
+}
 .sheet-row-totals .sheet-tooltip { margin-left: 10px; }
 
 /* ---- POINT SUMMARY ---- */
@@ -1835,6 +1838,9 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 .sheet-techniques-revised .sheet-col9 { width: 27px; }
 .sheet-techniques-revised .sheet-col10 { width: 60px; }
 .sheet-techniques-revised .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc(100% - 539px); }
+.sheet-techniques-revised .sheet-tooltip-tech-ref {
+    margin-left: -200px;
+}
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
