--- a/Knight/knight.css
+++ b/Knight/knight.css
@@ -164,7 +164,6 @@ div.sheet-buttonContainerFlexStart
 	padding-bottom: 1px;
 	flex-wrap: wrap;
 	align-content: baseline;
-	padding-right:5px;
 }
 
 div.sheet-buttonContainerFlexStart input[type="radio"],
@@ -364,6 +363,18 @@ input.sheet-tabMenu[value="12"] ~ div.sheet-tab12
 	min-width:823px;
 }
 
+.sheet-ta-content > .sheet-2colrow
+{
+	width:100%;
+	display:flex;
+	justify-content:space-between;
+}
+
+.sheet-tab-content > .sheet-2colrow > .sheet-col
+{
+	margin-right:1px !important;
+}
+
 input.sheet-ficheType[value="0"] ~ div div.sheet-fichePJ,
 input.sheet-ficheType[value="1"] ~ div div.sheet-fichePNJ,
 input.sheet-ficheType[value="2"] ~ div div.sheet-ficheCreature,
@@ -402,6 +413,11 @@ div.sheet-mainFlex3Block div.sheet-mainBlock
 	flex-basis: calc(33.33% - 6px);
 }
 
+.sheet-width100
+{
+	width:100% !important;
+}
+
 div.sheet-mainBlock,
 div.sheet-mainBlockEvolution,
 div.sheet-mainBlock2Way,
@@ -418,7 +434,6 @@ div.sheet-mainBlock6Way,
 div.sheet-mainBlockAI,
 div.sheet-blockSpecialAI
 {
-	width:100%;
 	background-color:RGB(93,111,179) !important;
 	border-bottom:1px solid RGB(93,111,179);
 	border-right:1px solid RGB(93,111,179);
@@ -561,17 +576,6 @@ div.sheet-mainBlock > p
 	text-align:justify;
 	padding:2px;
 	vertical-align:top;
-}
-
-div.sheet-mainBlock > div.sheet-2colrow,
-div.sheet-mainBlock > div.sheet-2colrow .sheet-col
-{
-	background-color:RGB(93,111,179);
-}
-
-div.sheet-mainBlock > div.sheet-2colrow .sheet-col
-{
-	width:calc(50% - 18px);
 }
 
 div.sheet-mainBlock > div.sheet-buttonContainerFlexCenter
@@ -882,6 +886,12 @@ div.sheet-mainBlock2Way > div input.sheet-center
 {
 	width:100% !important;
 	text-align:center;
+}
+
+input.sheet-noBRL
+{
+	border-right:0px;
+	border-left:0px;
 }
 
 div.sheet-mainBlock > div span
@@ -1994,17 +2004,17 @@ div.sheet-mainBlock5Way div h4.sheet-slot
 	font-size:14px;
 }
 
-div.sheet-mainBlock5Way div h4.sheet-slotSmall
+div.sheet-mainBlock5Way div h4.sheet-slotPNJ
 {
 	line-height:28px;
 	height:28px;
-	width:calc(100% - 13px) !important;
+	width:calc(100% - 45px) !important;
 	text-align:center !important;
 	background:RGB(93,111,179);
 	color:White;
 	padding:0px;
 	display:inline-block;
-	padding-left:13px;
+	padding-left:45px;
 	font-size:14px;
 }
 
@@ -2020,9 +2030,9 @@ div.sheet-mainBlock5Way div h4.sheet-slot label
 	align-items: center;
 }
 
-div.sheet-mainBlock5Way div h4.sheet-slotSmall label
+div.sheet-mainBlock5Way div h4.sheet-slotPNJ label
 {
-	width: 13px;
+	width: 45px;
 	height: 28px;
 	color: white;
 	float: right;
@@ -2030,6 +2040,11 @@ div.sheet-mainBlock5Way div h4.sheet-slotSmall label
 	padding: 0px;
 	display: flex;
 	align-items: center;
+}
+
+div.sheet-mainBlock5Way div h4.sheet-slotPNJ label input[type="number"]
+{
+	margin-right:5px;
 }
 
 div.sheet-mainBlock5Way div h4.sheet-titre label input[type="number"]
@@ -2400,6 +2415,7 @@ div.sheet-mainBlock6Way > div div.sheet-block15
 
 div.sheet-mainBlock6Way > div div.sheet-subBlockFieldset
 {
+	width:100%;
 	display:flex;
 	align-items: center;
 }
@@ -3975,7 +3991,7 @@ input.sheet-fanMade[value="0"] ~ div div.sheet-notFanMade,
 input.sheet-fanMade[value=""] ~ div div.sheet-notFanMade
 {
     display: flex !important;
-	width: 100%;
+	width: calc(100% - 2px);
 	flex-wrap:wrap;
 }
 
@@ -4142,7 +4158,7 @@ input.sheet-AE-min-maj[value="10"] ~ span::after
 
 .sheet-marginBodyCorrection1
 {
-	width:calc(100% - 5px);
+	width:calc(100% - 1px) !important;
 }
 
 .sheet-marginBottom1
