Ship pg2 Images
Ship pg2 Images for layout
Plus renaming newship style to shipConfig

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -3017,7 +3017,7 @@ input[type="number"].sheet-tugReactorCharge
 /*            SHIP CONFIGURATION CSS         */
 /* ***************************************** */
 
-div.sheet-newship
+div.sheet-shipConfig
 {
 	display: flex;
 	flex-flow: column nowrap;
