Finished Ship Sheet
Finished 2nd side of the ship sheet

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -364,6 +364,12 @@ div.sheet-row1550
 	top: 1550px;
 }
 
+div.sheet-row1575
+{
+	position: absolute;
+	top: 1575px;
+}
+
 div.sheet-row1600
 {
 	position: absolute;
@@ -392,6 +398,12 @@ div.sheet-row1850
 {
 	position: absolute;
 	top: 1850px;
+}
+
+div.sheet-row1890
+{
+	position: absolute;
+	top: 1890px;
 }
 
 div.sheet-row1900
@@ -575,6 +587,13 @@ div.sheet-column450
 	left: 450px;
 }
 
+div.sheet-column475
+{
+	justify-content: space-between;
+	position: absolute;
+	left: 475px;
+}
+
 div.sheet-column500
 {
 	justify-content: space-between;
@@ -647,6 +666,13 @@ input[type="number"].sheet-most
 	width: 80%;
 }
 
+select.sheet-fourFifths,
+input[type="text"].sheet-fourFifths,
+input[type="number"].sheet-fourFifths
+{
+	width: 70%;
+}
+
 select.sheet-threeQuarters,
 input[type="text"].sheet-threeQuarters,
 input[type="number"].sheet-threeQuarters
@@ -717,7 +743,7 @@ textarea
 
 	textarea.sheet-letter
 	{
-		height: 6em;
+		height: 95%;
 		width: 95%;
 	}
 
@@ -2051,8 +2077,9 @@ input[type="number"].sheet-currentCharge
 	flex-flow: nowrap;
 	font-size: 12px;
 }
+
 /* ***************************************** */
-/*			  SHIP MODULES					 */
+/*				SHIP MODULES				 */
 /* ***************************************** */
 .sheet-moduleWidget
 {
@@ -3021,7 +3048,7 @@ div.sheet-shipConfig
 {
 	display: flex;
 	flex-flow: column nowrap;
-	width: 880px;
+	width: 900px;
 	padding: 5px;
 }
 
@@ -3153,8 +3180,6 @@ input[type=number].sheet-txtfield
 		grid-row: 12 / 13;
 	}
 
-
-
 	.sheet-ship-block .sheet-armor21
 	{
 		grid-column: 1 / 2;
@@ -3194,7 +3219,6 @@ input[type=number].sheet-txtfield
 		grid-column: 4 / 5;
 		grid-row: 13 / 14;
 	}
-
 
 	/* ship section integrity */
 	.sheet-ship-block .sheet-border-sys-integrity
@@ -3276,7 +3300,6 @@ input[type=number].sheet-txtfield
 			content: "Armour";
 			margin-left: 19px;
 		}
-
 
 	/*    Ship section component visuals    */
 	.sheet-ship-block .sheet-patches input[type="checkbox"]
@@ -3407,7 +3430,6 @@ input[type=number].sheet-txtfield
 }
 
 /*  Selection toggle functions */
-
 .sheet-ship-block .sheet-ship-oct input[type="checkbox"]
 {
 	opacity: 0;
@@ -3452,7 +3474,6 @@ input[type=number].sheet-txtfield
 
 
 /* Armor & Conditions toggles */
-
 .sheet-ship-block .sheet-ship-armor input[type="checkbox"],
 .sheet-ship-block .sheet-ship-resiliance input[type="checkbox"],
 .sheet-ship-block .sheet-ship-sys-integrity input[type="checkbox"],
@@ -3566,8 +3587,6 @@ input[type=number].sheet-txtfield
 	background-color: transparent;
 }
 
-
-
 /* Colors / Label toggles */
 
 /* Orange */
@@ -3597,7 +3616,6 @@ input[type=number].sheet-txtfield
 	background: linear-gradient( rgba(16, 115, 85, 0.5), rgba(132, 222, 2, 0.5) ), url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
-
 
 /*     sheet section label toggle     */
 .sheet-ship-oct input[type="text"]
@@ -3728,7 +3746,6 @@ input[type=number].sheet-txtfield
 	background-size: 24px 24px;
 }
 
-
 /* default insec & artery */
 .sheet-ship-block span.sheet-default
 {
@@ -3841,4 +3858,240 @@ hr
 	padding-left: 10px;
 	margin-left: 4px;
 	margin-bottom: 5px;
+}
+
+/* ***************************************** */
+/*				Ship Page Two				 */
+/* ***************************************** */
+
+/*				Resource Boxes				*/
+.sheet-resourceWidget
+{
+	display: flex;
+	flex-flow: nowrap;
+	width: 440px;
+	justify-content: space-evenly;
+}
+
+.sheet-resource
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resources.png);
+	background-size: 140px 94.618px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr 50px;
+	grid-template-rows: 15px 1fr 12px;
+	grid-gap: 0px;
+	height: 93px;
+	width: 140px;
+	padding-top: 2px;
+	padding-left: 2px;
+	z-index: 0;
+}
+
+input[type="number"].sheet-resourceBox
+{
+	height: 60px;
+	width: 130px;
+	font-size: 18px;
+}
+
+.sheet-resourceBoxPlace
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	padding-left: 6px;
+	padding-top: 2px;
+}
+
+.sheet-resourceTitle
+{
+	font-variant: small-caps;
+	font-size: 10px;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	padding-left: 4px;
+	padding-top: 2px;
+}
+
+.sheet-resourceTonnes
+{
+	font-variant: small-caps;
+	font-size: 9px;
+	text-align: end;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 3;
+	grid-row-end: 4;
+	padding-right: 4px;
+	padding-bottom: 8px;
+}
+
+/*				Letter of Marque			*/
+.sheet-letterOfMarque
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/LetterofMarque.png);
+	background-size: 440px 416.49px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 30px 1fr 150px;
+	grid-template-rows: 24px 17px 1fr 12px 12px 15px;
+	grid-gap: 0px;
+	height: 412px;
+	width: 438px;
+	padding-top: 8px;
+	padding-left: 2px;
+	z-index: 0;
+}
+
+.sheet-letterOfMarqueTitle
+{
+	font-size: 14px;
+	text-align: left;
+	font-variant: small-caps;
+	font-weight: 500;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	padding-left: 4px;
+	padding-top: 2px;
+}
+
+.sheet-letterOfMarqueGreeting
+{
+	font-size: 12px;
+	text-align: left;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	padding-left: 14px;
+	padding-top: 2px;
+}
+
+.sheet-letterOfMarqueBoxPlace
+{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 3;
+	grid-row-end: 4;
+	padding-left: 14px;
+	padding-top: 2px;
+}
+
+.sheet-letterOfMarquePatron
+{
+	font-size: 12px;
+	font-style: italic;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 4;
+	grid-row-end: 5;
+	padding-left: 0px;
+	padding-top: 0px;
+}
+
+.sheet-letterOfMarquePatronTitle
+{
+	font-size: 10px;
+	text-align: center;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 5;
+	grid-row-end: 6;
+	padding-left: 0px;
+	padding-top: 0px;
+}
+
+/*			Cargo			*/
+.sheet-cargo
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/AssetTradeGoods.png);
+	background-size: 440px 1066.5px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 70% 45px 45px 1fr;
+	grid-template-rows: 24px 1fr;
+	grid-gap: 0px;
+	height: 1066px;
+	width: 440px;
+	padding-top: 0px;
+	padding-left: 4px;
+	padding-right:8px;
+	z-index: 0;
+}
+
+.sheet-cargoTitle
+{
+	font-size: 14px;
+	text-align: left;
+	vertical-align: baseline;
+	font-variant: small-caps;
+	font-weight: 500;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	padding-left: 4px;
+	padding-top: 2px;
+}
+
+.sheet-cargoBox
+{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-cargoWorth
+{
+	font-size: 11px;
+	text-align: center;
+	vertical-align: baseline;
+	font-variant: small-caps;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	padding-left: 0px;
+	padding-top: 6px;
+}
+
+.sheet-cargoTonnage
+{
+	font-size: 11px;
+	text-align: center;
+	vertical-align:baseline;
+	font-variant: small-caps;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	padding-left: 0px;
+	padding-top: 6px;
+}
+
+/*			Notes			*/
+.sheet-notes
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/notes.png);
+	background-size: 440px 750px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 24px 1fr;
+	grid-gap: 0px;
+	height: 750px;
+	width: 440px;
+	padding-top: 0px;
+	margin-left: 10px;
+	padding-left: 4px;
+	padding-right: 8px;
+	z-index: 0;
 }
