Updated the Crew Aspects to Grid
Altered the Crew sheet aspects to use Grid

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -177,10 +177,10 @@ div.sheet-rowTop
 	position: static;
 }
 
-div.sheet-row250
+div.sheet-row50
 {
 	position: absolute;
-	top: 250px;
+	top: 50px;
 }
 
 div.sheet-row275
@@ -1136,7 +1136,179 @@ button[type=roll].sheet-rollButton::before
 /* ******************************* */
 /*			Aspects		           */
 /* ******************************* */
-.sheet-aspects
+.sheet-crewTop
+{
+	width: 900px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 28px 1fr;
+	grid-gap: 0px;
+	height: 140px;
+	grid-template-areas: "ID ID" "crewAspect crewSpecies";
+}
+.sheet-crewID
+{
+	width: 890px;
+	grid-area: ID;
+	display: grid;
+	grid-template-columns: 1fr 5fr 1fr 5fr;
+	grid-template-rows: auto;
+	grid-gap: 0px;
+	height: 24px;
+	z-index: 0;
+}
+
+.sheet-alias
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 18px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-aliasName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-player
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 14px;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-playerName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-crewAspects
+{
+	width: 430px;
+	padding: 5px;
+	display: grid;
+	grid-area: crewAspect;
+	grid-template-columns: 160px 1fr;
+	grid-template-rows: repeat(6,18px);
+	grid-gap: 0px;
+	height: 108px;
+	z-index: 0;
+}
+
+.sheet-departmentA
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-stationA
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-departmentB
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-stationB
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-species
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/species.png);
+	background-size: 440px 131px;
+	background-repeat: no-repeat;
+	width: 440px;
+	padding: 5px;
+	display: grid;
+	grid-area: crewSpecies;
+	grid-template-columns: repeat(2, 100px 1fr);
+	grid-template-rows: 18px repeat(5,minmax(15px,18px));
+	grid-gap: 0px;
+	height: 130px;
+	z-index: 0;
+}
+
+.sheet-speciesTitle
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-variant: small-caps;
+	font-weight: 500;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-speciesName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-shipAspects
 {
 	width: 890px;
 	padding: 5px;
